@@ -1,22 +1,26 @@
 package com.oo2.grupo15.services.implementation;
 
+import java.time.LocalDateTime;
 import java.util.List;
+import java.util.stream.Collectors;
 
+import com.oo2.grupo15.dtos.SolicitanteDTO;
+import com.oo2.grupo15.entities.Contacto;
+import com.oo2.grupo15.repositories.IContactoRepository;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import com.oo2.grupo15.dtos.TurnoDTO;
-import com.oo2.grupo15.entities.ServicioLugar;
 import com.oo2.grupo15.entities.Solicitante;
 import com.oo2.grupo15.entities.Turno;
-import com.oo2.grupo15.repositories.ITurnoRepository;
 import com.oo2.grupo15.repositories.IServicioLugarRepository;
 import com.oo2.grupo15.repositories.ISolicitanteRepository;
+import com.oo2.grupo15.repositories.ITurnoRepository;
 import com.oo2.grupo15.services.ITurnoService;
 
 @Service
-public abstract class TurnoService implements ITurnoService {
+public class TurnoService implements ITurnoService {
 
     @Autowired
     private ITurnoRepository turnoRepository;
@@ -26,6 +30,8 @@ public abstract class TurnoService implements ITurnoService {
 
     @Autowired
     private ISolicitanteRepository solicitanteRepository;
+    @Autowired
+    private IContactoRepository contactoRepository;
 
     private ModelMapper modelMapper = new ModelMapper();
 
@@ -34,8 +40,16 @@ public abstract class TurnoService implements ITurnoService {
         Turno turno = new Turno();
         turno.setFechaHora(dto.getFechaHora());
         turno.setEstado(dto.isEstado());
-        turno.setServicioLugar(servicioLugarRepository.findById(dto.getServicioLugarId()).orElseThrow());
-        turno.setSolicitante(solicitanteRepository.findById(dto.getSolicitanteId()).orElseThrow());
+
+        if (dto.getServicioLugarId() != null) {
+            turno.setServicioLugar(servicioLugarRepository.findById(dto.getServicioLugarId())
+                    .orElseThrow(() -> new RuntimeException("ServicioLugar no encontrado")));
+        }
+
+        if (dto.getSolicitanteId() != null) {
+            turno.setSolicitante(solicitanteRepository.findById(dto.getSolicitanteId())
+                    .orElseThrow(() -> new RuntimeException("Solicitante no encontrado")));
+        }
 
         Turno saved = turnoRepository.save(turno);
         return modelMapper.map(saved, TurnoDTO.class);
@@ -43,11 +57,21 @@ public abstract class TurnoService implements ITurnoService {
 
     @Override
     public TurnoDTO actualizarTurno(Long id, TurnoDTO dto) {
-        Turno turno = turnoRepository.findById(id).orElseThrow();
+        Turno turno = turnoRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Turno no encontrado"));
+
         turno.setFechaHora(dto.getFechaHora());
         turno.setEstado(dto.isEstado());
-        turno.setServicioLugar(servicioLugarRepository.findById(dto.getServicioLugarId()).orElseThrow());
-        turno.setSolicitante(solicitanteRepository.findById(dto.getSolicitanteId()).orElseThrow());
+
+        if (dto.getServicioLugarId() != null) {
+            turno.setServicioLugar(servicioLugarRepository.findById(dto.getServicioLugarId())
+                    .orElseThrow(() -> new RuntimeException("ServicioLugar no encontrado")));
+        }
+
+        if (dto.getSolicitanteId() != null) {
+            turno.setSolicitante(solicitanteRepository.findById(dto.getSolicitanteId())
+                    .orElseThrow(() -> new RuntimeException("Solicitante no encontrado")));
+        }
 
         Turno updated = turnoRepository.save(turno);
         return modelMapper.map(updated, TurnoDTO.class);
@@ -60,14 +84,82 @@ public abstract class TurnoService implements ITurnoService {
 
     @Override
     public List<TurnoDTO> obtenerTodos() {
-        return turnoRepository.findAll()
-                .stream()
+        return turnoRepository.findAll().stream()
                 .map(turno -> modelMapper.map(turno, TurnoDTO.class))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
     public TurnoDTO obtenerPorId(Long id) {
-        return modelMapper.map(turnoRepository.findById(id).orElseThrow(), TurnoDTO.class);
+        return modelMapper.map(
+                turnoRepository.findById(id)
+                        .orElseThrow(() -> new RuntimeException("Turno no encontrado")),
+                TurnoDTO.class);
     }
+
+    @Override
+    public List<TurnoDTO> obtenerTurnosEntreFechas(LocalDateTime fechaInicio, LocalDateTime fechaFin) {
+        List<Object[]> resultados = turnoRepository.buscarTurnosSimplificados(fechaInicio, fechaFin);
+        return resultados.stream()
+                .map(resultado -> {
+                    TurnoDTO dto = new TurnoDTO();
+                    dto.setId((Long) resultado[0]);
+                    dto.setFechaHora((LocalDateTime) resultado[1]);
+                    dto.setEstado((Boolean) resultado[2]);
+                    return dto;
+                })
+                .collect(Collectors.toList());
+    }
+    @Override
+    public TurnoDTO crearTurnoConDni(TurnoDTO dto, SolicitanteDTO solicitanteDTO) {
+        // Primero verificamos si existe un solicitante con ese DNI usando el método
+        Solicitante solicitanteExistente = solicitanteRepository.findByContactoDni(solicitanteDTO.getDni());
+
+        // Si encontramos un solicitante, usamos su ID
+        if (solicitanteExistente != null) {
+            System.out.println("Solicitante encontrado con DNI " + solicitanteDTO.getDni() + ", ID: " + solicitanteExistente.getId());
+            dto.setSolicitanteId(solicitanteExistente.getId());
+        } else {
+            System.out.println("No se encontró solicitante con DNI: " + solicitanteDTO.getDni() + ". Creando nuevo solicitante...");
+
+            try {
+                // Crear nuevo solicitante - con constructor booleano para el atributo 'pago'
+                Solicitante nuevoSolicitante = new Solicitante(false);
+
+                // Configurar propiedades del Usuario
+                nuevoSolicitante.setEmail(solicitanteDTO.getEmail());
+                nuevoSolicitante.setPassword("password_temporal"); // Contraseña temporal
+
+                // Crear y configurar el contacto
+                Contacto contacto = new Contacto();
+                contacto.setNombre(solicitanteDTO.getNombre());
+                contacto.setApellido(solicitanteDTO.getApellido());
+                contacto.setDni(solicitanteDTO.getDni());
+
+                // Guardar primero el contacto
+                Contacto contactoGuardado = contactoRepository.save(contacto);
+
+                // Asignar el contacto guardado al solicitante
+                nuevoSolicitante.setContacto(contactoGuardado);
+
+                // Guardar el solicitante
+                Solicitante saved = solicitanteRepository.save(nuevoSolicitante);
+                System.out.println("Nuevo solicitante creado con ID: " + saved.getId());
+
+                // Asignar el ID del solicitante al DTO del turno
+                dto.setSolicitanteId(saved.getId());
+            } catch (Exception e) {
+                System.err.println("Error al crear solicitante: " + e.getMessage());
+                e.printStackTrace();
+                // Si falla la creación del solicitante, continuamos sin asignar uno al turno
+            }
+        }
+
+        // Asegurarnos de que el DTO tenga el solicitanteId
+        System.out.println("Creando turno con solicitanteId: " + dto.getSolicitanteId());
+
+        // Ahora creamos el turno con el solicitante asignado
+        return crearTurno(dto);
+    }
+
 }
